--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -2,6 +2,11 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+
+.para {
+  font-size: 32px;
+  
+}
 .para,
 .small-para {
   color: hsl(0, 0%, 0%);
@@ -9,12 +14,8 @@ body {
 }
 
 .small-para {
-  font-size: 14px;
-  font-weight: 800;
-}
-
-.para {
   font-size: 22px;
+  font-weight: 800;
 }
 
 .confirm {
@@ -27,6 +28,14 @@ body {
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   font-size: 20px;
+  border-color: black;
+
+}
+#confirm-button{
+  background-color: green;
+  color:white;
+  border-color: black;
+  
 }
 
 .child {
@@ -39,4 +48,9 @@ div.text {
   color: rgb(0, 0, 0);
   font-size: 22px;
   font-weight: 100;
+}
+
+.text .child {
+  font-size: 16px;
+  font-weight: bold;
 }
